# airflow_sandbox

./: fs_etl_pod.yaml  host_dags_pv.yaml  host_dags_pvc.yaml  host_path_pv.yaml  run_airflow_on_minikube.sh  run_airflow_webserver.sh  run_airlfow_on_minikube.sh  setup.cfg  simple_kuber_pod_dag.py  values.yaml
airflow_sandbox/: args_checks.py  cry_for_help.py  kube_fuss.py  resource_restriction.py  sample_kuber_dag.py  sample_python_dag.py  simple_kuber_pod_dag.py  wheres_my_pod_dude.py
airflow_sandbox/dags/: guinea_pig.py_  simple_python_dag_2.py
docker/: docker-compose.yml  start_docker.sh  stop_docker.sh
docker/airflow_docker_image/: Dockerfile  build_and_push.sh  pip.conf
docker/ubuntu_docker_image/: Dockerfile  build_and_push.sh
fastapi_fuss/: fastapi_fuss.py
in_kube_fuss/: cleanup.sh  code_pv.yaml  code_pvc.yaml  default_admin.yaml  fs_etl_pod.yaml  list_pods.py  mount_data.sh  nginx_pod.yaml  nginx_service.yaml
kube_client_fuss/: hello_world_pod.yaml  kube_client_fuss_1.py  mount_data.sh
kube_client_fuss/data/: hello_world.py
kube_executor_dags/: hello_world_dag.py  mount_data.sh
kube_executor_dags/dummy/: etl.py  features.yaml  requirements.txt  requirements_big_and_fat.txt  settings.yaml  simple_dag.py  startup_multiline_script.sql  xcom_example_no_fs.py
kube_executor_dags/overriding/: overriding_dag.py
kube_executor_dags/super_dooper_mega_dag/: overriding_pod.yaml  super_dooper_mega_dag.py
kube_executor_dags/super_dooper_uber_dag/: super_dooper_uber_dag.py
nodeport_api/: app.py  main.py  scheduler.py
test_pv/: hello_world_dag.py
(+31 files in other folders)
