[metadata]
name = airflow-sandbox
version = 0.0.1

[options]
;include_package_data = True

install_requires =
;    pyspark == 3.1.1
    apache-airflow >= 2.2.4
    virtualenv
    dill
    kubernetes
    psycopg2-binary
    apache-airflow-providers-cncf-kubernetes
    devtools
;    Sphinx >= 4.3.1
;    sphinx-rtd-theme >= 1.0.0
;    sphinx-autodoc-typehints >= "1.12.0
;    sphinx-copybutton

packages = find:
package_dir =
    = .
[options.packages.find]
where = .
